@@ -3,23 +3,15 @@ package com.solace.spring.cloud.stream.binder.inbound.acknowledge;
 import com.solace.spring.cloud.stream.binder.util.ErrorQueueInfrastructure;
 import com.solace.spring.cloud.stream.binder.util.FlowReceiverContainer;
 import com.solace.spring.cloud.stream.binder.util.MessageContainer;
-import com.solace.spring.cloud.stream.binder.util.RetryableTaskService;
-import org.springframework.integration.acks.AcknowledgmentCallback;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.integration.acks.AcknowledgmentCallback;
 
 public class JCSMPAcknowledgementCallbackFactory {
 	private final FlowReceiverContainer flowReceiverContainer;
-	private final boolean hasTemporaryQueue;
-	private final RetryableTaskService taskService;
 	private ErrorQueueInfrastructure errorQueueInfrastructure;
 
-	public JCSMPAcknowledgementCallbackFactory(FlowReceiverContainer flowReceiverContainer, boolean hasTemporaryQueue,
-											   RetryableTaskService taskService) {
+	public JCSMPAcknowledgementCallbackFactory(FlowReceiverContainer flowReceiverContainer) {
 		this.flowReceiverContainer = flowReceiverContainer;
-		this.hasTemporaryQueue = hasTemporaryQueue;
-		this.taskService = taskService;
 	}
 
 	public void setErrorQueueInfrastructure(ErrorQueueInfrastructure errorQueueInfrastructure) {
@@ -32,13 +24,12 @@ public class JCSMPAcknowledgementCallbackFactory {
 
 	public AcknowledgmentCallback createBatchCallback(List<MessageContainer> messageContainers) {
 		return new JCSMPBatchAcknowledgementCallback(messageContainers.stream()
-				.map(this::createJCSMPCallback)
-				.collect(Collectors.toList()), flowReceiverContainer, taskService);
+				.map(this::createJCSMPCallback).toList());
 	}
 
 	private JCSMPAcknowledgementCallback createJCSMPCallback(MessageContainer messageContainer) {
-		return new JCSMPAcknowledgementCallback(messageContainer, flowReceiverContainer, hasTemporaryQueue,
-				taskService, errorQueueInfrastructure);
+		return new JCSMPAcknowledgementCallback(messageContainer, flowReceiverContainer,
+				errorQueueInfrastructure);
 	}
 
 }
